--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,15 +5,7 @@ description: A new Flutter project.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
+#
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
 
@@ -31,15 +23,14 @@ dependencies:
   http:
   carousel_pro:
   path_provider:
-  sqflite: ^1.1.0
-  provider:
+  sqflite: 
   get:
-  get_it:
   shimmer:
   shared_preferences:
   flutter_credit_card:
   flutter_svg:
   font_awesome_flutter:
+  fluttertoast:
 
 dev_dependencies:
   flutter_test:
